--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "formik": "^2.2.6",
+    "jwt-decode": "^3.1.2",
     "next": "10.1.3",
     "node-sass": "^5.0.0",
     "react": "17.0.2",
